Reverted new UI to fix fatal bug with JAR and EXE not opening